--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/4EFF24E3-FF4F-47A2-BAFB-5995E1A67C4B_1_201_a.jpeg?raw=true" # you
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Scientist @AMERICANEXPRESS
   Ventures Fellow @BLCKVC
-  www.ayaspencer.com
+  <a href="www.ayaspencer.com">www.ayaspencer.com</a> 
   <br><br>
   Hello! My name is Aya. I am an associate in the Advanced Analytics division at American Express. I am also a Ventures Fellow at the Black Ventures Institute. 
   I have a passion in three things: Data (especially understanding model bias in ML algorithms), Venture Capital (especially food startups and food technology), and diversity in tech!
