--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,12 @@
 title: Aya Spencer # your name (or website title) here
 logo: "/images/4EFF24E3-FF4F-47A2-BAFB-5995E1A67C4B_1_201_a.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Data Scientist @AMERICANEXPRESS
-  Ventures Fellow @BLCKVC
-  <br><br>
- <a href="https://www.linkedin.com/in/aya-spencer-674a56107">View My LinkedIn Profile</a> 
-theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
-
+   Data Scientist @AMERICANEXPRESS
+   Ventures Fellow @BLCKVC
+   www.ayaspencer.com
+   <br><br>
+   Hello! My name is Aya. I am an associate in the Advanced Analytics division at American Express. I am also a Ventures Fellow at the Black Ventures Institute. 
+   I have a passion in three things: Data (especially understanding model bias in ML algorithms), Venture Capital (especially food startups and food technology), and diversity in tech!
+   <a href="https://www.linkedin.com/in/aya-spencer-674a56107">View My LinkedIn Profile</a> 
+   
+ theme: jekyll-theme-minimal
