--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
-title: Aya Spencer # your name (or website title) here
-logo: "/images/4EFF24E3-FF4F-47A2-BAFB-5995E1A67C4B_1_201_a.jpeg?raw=true" # your photo (or logo) here
+title: John Doe # your name (or website title) here
+logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-   Data Scientist @AMERICANEXPRESS
-   Ventures Fellow @BLCKVC
-   www.ayaspencer.com 
+  First description 
   <br><br>
   Second description 
   <br><br>
-  <a href="https://www.linkedin.com/in/aya-spencer-674a56107/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
