--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
 title: Aya Spencer # your name (or website title) here
 logo: "/images/4EFF24E3-FF4F-47A2-BAFB-5995E1A67C4B_1_201_a.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Associate @AmericanExpress
+  Ventures Fellow @BLCKVC
   <br><br>
-  Second description 
+  I love all things data! 
+  I also cook like crazy.
   <br><br>
   <a href="https://www.linkedin.com/in/aya-spencer-674a56107">View My LinkedIn Profile</a> 
   
