--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Aya Spencer # your name (or website title) here
 logo: "/images/4EFF24E3-FF4F-47A2-BAFB-5995E1A67C4B_1_201_a.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Associate @AmericanExpress
+  Associate @AmericanExpress<br/>
   Ventures Fellow @BLCKVC
   <br><br>
   I love all things data! 
