--- a/_config.yml
+++ b/_config.yml
@@ -13,4 +13,4 @@ description: > # your text below (remove <br> elements if you don't need line br
 
   
 theme: jekyll-theme-minimal
-google_analytics: UA-192312859-1 # your Google Analytics tracking ID here
+google_analytics:  # your Google Analytics tracking ID here
